output/dreqlParser.java
// $ANTLR 3.1.2 /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g 2009-07-09 16:56:14



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class dreqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DREQL", "COMMANDS", "COMMAND", "CLASS", "RELATION", "TABLE", "FIELDS", "FIELD", "DATATYPE", "FIELDNAME", "OPTIONAL", "OPTION", "RELTYPE", "EDITABLE", "VISIBLE", "MASKED", "KEY", "AUTOINC", "ONE", "ZEROTOONE", "ONETON", "ZEROTON", "NTOM", "ENUM", "ENUMOPT", "ARGS", "SET", "SETTYPE", "RENOM", "ABSTRACT", "EXTENDS", "TYPE", "NUM", "VAL", "NS", "COMMENT", "LINE_COMMENT", "';'", "'class'", "'Class'", "'('", "')'", "'abstract'", "'Abstract'", "'extends'", "'Extends'", "'relation'", "'Relation'", "','", "':'", "'renom'", "'Renom'", "'='", "'['", "']'", "'enum'", "'Enum'", "'set'", "'Set'", "'editable'", "'visible'", "'optional'", "'masked'", "'key'", "'autoinc'", "'1'", "'0..1'", "'1..*'", "'0..*'", "'*'", "'..'"
    };
    public static final int TYPE=35;
    public static final int T__42=42;
    public static final int ARGS=29;
    public static final int VISIBLE=18;
    public static final int T__57=57;
    public static final int T__51=51;
    public static final int ZEROTOONE=23;
    public static final int COMMANDS=5;
    public static final int T__47=47;
    public static final int T__69=69;
    public static final int T__73=73;
    public static final int T__50=50;
    public static final int DREQL=4;
    public static final int ABSTRACT=33;
    public static final int T__65=65;
    public static final int T__72=72;
    public static final int RELTYPE=16;
    public static final int T__70=70;
    public static final int T__67=67;
    public static final int RENOM=32;
    public static final int T__74=74;
    public static final int VAL=37;
    public static final int T__52=52;
    public static final int T__46=46;
    public static final int EDITABLE=17;
    public static final int T__68=68;
    public static final int T__62=62;
    public static final int T__49=49;
    public static final int NTOM=26;
    public static final int T__61=61;
    public static final int ENUMOPT=28;
    public static final int T__59=59;
    public static final int ZEROTON=25;
    public static final int OPTIONAL=14;
    public static final int T__54=54;
    public static final int T__48=48;
    public static final int SETTYPE=31;
    public static final int ONETON=24;
    public static final int MASKED=19;
    public static final int EXTENDS=34;
    public static final int T__56=56;
    public static final int ENUM=27;
    public static final int ONE=22;
    public static final int T__58=58;
    public static final int T__64=64;
    public static final int T__44=44;
    public static final int T__66=66;
    public static final int RELATION=8;
    public static final int COMMENT=39;
    public static final int LINE_COMMENT=40;
    public static final int NS=38;
    public static final int FIELD=11;
    public static final int T__55=55;
    public static final int T__45=45;
    public static final int CLASS=7;
    public static final int T__63=63;
    public static final int TABLE=9;
    public static final int T__43=43;
    public static final int KEY=20;
    public static final int FIELDNAME=13;
    public static final int EOF=-1;
    public static final int T__53=53;
    public static final int NUM=36;
    public static final int DATATYPE=12;
    public static final int AUTOINC=21;
    public static final int SET=30;
    public static final int T__60=60;
    public static final int T__41=41;
    public static final int COMMAND=6;
    public static final int OPTION=15;
    public static final int T__71=71;
    public static final int FIELDS=10;

    // delegates
    // delegators


        public dreqlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public dreqlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return dreqlParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g"; }




    public static class dreql_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dreql"
    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:19:1: dreql : commands -> ^( DREQL commands ) ;
    public final dreqlParser.dreql_return dreql() throws RecognitionException {
        dreqlParser.dreql_return retval = new dreqlParser.dreql_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        dreqlParser.commands_return commands1 = null;


        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:19:7: ( commands -> ^( DREQL commands ) )
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:19:9: commands
            {
            pushFollow(FOLLOW_commands_in_dreql147);
            commands1=commands();

            state._fsp--;

            stream_commands.add(commands1.getTree());


            // AST REWRITE
            // elements: commands
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 20:3: -> ^( DREQL commands )
            {
                // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:20:6: ^( DREQL commands )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DREQL, "DREQL"), root_1);

                adaptor.addChild(root_1, stream_commands.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "dreql"

    public static class commands_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "commands"
    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:23:1: commands : ( command ';' )+ -> ^( COMMANDS ( command )+ ) ;
    public final dreqlParser.commands_return commands() throws RecognitionException {
        dreqlParser.commands_return retval = new dreqlParser.commands_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        dreqlParser.command_return command2 = null;


        Object char_literal3_tree=null;
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
        try {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:23:10: ( ( command ';' )+ -> ^( COMMANDS ( command )+ ) )
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:23:12: ( command ';' )+
            {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:23:12: ( command ';' )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=42 && LA1_0<=43)||(LA1_0>=46 && LA1_0<=47)||(LA1_0>=50 && LA1_0<=51)||(LA1_0>=54 && LA1_0<=55)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:23:13: command ';'
            	    {
            	    pushFollow(FOLLOW_command_in_commands168);
            	    command2=command();

            	    state._fsp--;

            	    stream_command.add(command2.getTree());
            	    char_literal3=(Token)match(input,41,FOLLOW_41_in_commands170);  
            	    stream_41.add(char_literal3);


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: command
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 24:3: -> ^( COMMANDS ( command )+ )
            {
                // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:24:6: ^( COMMANDS ( command )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_1);

                if ( !(stream_command.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_command.hasNext() ) {
                    adaptor.addChild(root_1, stream_command.nextTree());

                }
                stream_command.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "commands"

    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:1: command : (a= dclass | b= relation | c= renom ) -> {a!=null}? ^( COMMAND dclass ) -> {b!=null}? ^( COMMAND relation ) -> ^( COMMAND renom ) ;
    public final dreqlParser.command_return command() throws RecognitionException {
        dreqlParser.command_return retval = new dreqlParser.command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        dreqlParser.dclass_return a = null;

        dreqlParser.relation_return b = null;

        dreqlParser.renom_return c = null;


        RewriteRuleSubtreeStream stream_dclass=new RewriteRuleSubtreeStream(adaptor,"rule dclass");
        RewriteRuleSubtreeStream stream_renom=new RewriteRuleSubtreeStream(adaptor,"rule renom");
        RewriteRuleSubtreeStream stream_relation=new RewriteRuleSubtreeStream(adaptor,"rule relation");
        try {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:9: ( (a= dclass | b= relation | c= renom ) -> {a!=null}? ^( COMMAND dclass ) -> {b!=null}? ^( COMMAND relation ) -> ^( COMMAND renom ) )
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:11: (a= dclass | b= relation | c= renom )
            {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:11: (a= dclass | b= relation | c= renom )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 42:
            case 43:
            case 46:
            case 47:
                {
                alt2=1;
                }
                break;
            case 50:
            case 51:
                {
                alt2=2;
                }
                break;
            case 54:
            case 55:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:12: a= dclass
                    {
                    pushFollow(FOLLOW_dclass_in_command196);
                    a=dclass();

                    state._fsp--;

                    stream_dclass.add(a.getTree());

                    }
                    break;
                case 2 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:23: b= relation
                    {
                    pushFollow(FOLLOW_relation_in_command202);
                    b=relation();

                    state._fsp--;

                    stream_relation.add(b.getTree());

                    }
                    break;
                case 3 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:27:36: c= renom
                    {
                    pushFollow(FOLLOW_renom_in_command208);
                    c=renom();

                    state._fsp--;

                    stream_renom.add(c.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: relation, renom, dclass
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 28:3: -> {a!=null}? ^( COMMAND dclass )
            if (a!=null) {
                // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:28:17: ^( COMMAND dclass )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMAND, "COMMAND"), root_1);

                adaptor.addChild(root_1, stream_dclass.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }
            else // 29:3: -> {b!=null}? ^( COMMAND relation )
            if (b!=null) {
                // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:29:17: ^( COMMAND relation )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMAND, "COMMAND"), root_1);

                adaptor.addChild(root_1, stream_relation.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }
            else // 30:3: -> ^( COMMAND renom )
            {
                // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:30:6: ^( COMMAND renom )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMAND, "COMMAND"), root_1);

                adaptor.addChild(root_1, stream_renom.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "command"

    public static class dclass_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dclass"
    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:1: dclass : ( ( 'class' | 'Class' ) table '(' fields ')' -> ^( CLASS table fields ) | ( 'abstract' | 'Abstract' ) table '(' fields ')' -> ^( ABSTRACT table fields ) | ( 'class' | 'Class' ) table ( 'extends' | 'Extends' ) table '(' fields ')' -> ^( EXTENDS table table fields ) );
    public final dreqlParser.dclass_return dclass() throws RecognitionException {
        dreqlParser.dclass_return retval = new dreqlParser.dclass_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        Token string_literal5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token string_literal10=null;
        Token string_literal11=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Token string_literal16=null;
        Token string_literal17=null;
        Token string_literal19=null;
        Token string_literal20=null;
        Token char_literal22=null;
        Token char_literal24=null;
        dreqlParser.table_return table6 = null;

        dreqlParser.fields_return fields8 = null;

        dreqlParser.table_return table12 = null;

        dreqlParser.fields_return fields14 = null;

        dreqlParser.table_return table18 = null;

        dreqlParser.table_return table21 = null;

        dreqlParser.fields_return fields23 = null;


        Object string_literal4_tree=null;
        Object string_literal5_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        Object string_literal10_tree=null;
        Object string_literal11_tree=null;
        Object char_literal13_tree=null;
        Object char_literal15_tree=null;
        Object string_literal16_tree=null;
        Object string_literal17_tree=null;
        Object string_literal19_tree=null;
        Object string_literal20_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleSubtreeStream stream_table=new RewriteRuleSubtreeStream(adaptor,"rule table");
        RewriteRuleSubtreeStream stream_fields=new RewriteRuleSubtreeStream(adaptor,"rule fields");
        try {
            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:8: ( ( 'class' | 'Class' ) table '(' fields ')' -> ^( CLASS table fields ) | ( 'abstract' | 'Abstract' ) table '(' fields ')' -> ^( ABSTRACT table fields ) | ( 'class' | 'Class' ) table ( 'extends' | 'Extends' ) table '(' fields ')' -> ^( EXTENDS table table fields ) )
            int alt7=3;
            switch ( input.LA(1) ) {
            case 42:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==TYPE) ) {
                    int LA7_4 = input.LA(3);

                    if ( ((LA7_4>=48 && LA7_4<=49)) ) {
                        alt7=3;
                    }
                    else if ( (LA7_4==44) ) {
                        alt7=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 4, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case 43:
                {
                int LA7_2 = input.LA(2);

                if ( (LA7_2==TYPE) ) {
                    int LA7_4 = input.LA(3);

                    if ( ((LA7_4>=48 && LA7_4<=49)) ) {
                        alt7=3;
                    }
                    else if ( (LA7_4==44) ) {
                        alt7=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 4, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case 46:
            case 47:
                {
                alt7=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:10: ( 'class' | 'Class' ) table '(' fields ')'
                    {
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:10: ( 'class' | 'Class' )
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==42) ) {
                        alt3=1;
                    }
                    else if ( (LA3_0==43) ) {
                        alt3=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                        throw nvae;
                    }
                    switch (alt3) {
                        case 1 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:11: 'class'
                            {
                            string_literal4=(Token)match(input,42,FOLLOW_42_in_dclass254);  
                            stream_42.add(string_literal4);


                            }
                            break;
                        case 2 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:33:21: 'Class'
                            {
                            string_literal5=(Token)match(input,43,FOLLOW_43_in_dclass258);  
                            stream_43.add(string_literal5);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_table_in_dclass261);
                    table6=table();

                    state._fsp--;

                    stream_table.add(table6.getTree());
                    char_literal7=(Token)match(input,44,FOLLOW_44_in_dclass263);  
                    stream_44.add(char_literal7);

                    pushFollow(FOLLOW_fields_in_dclass265);
                    fields8=fields();

                    state._fsp--;

                    stream_fields.add(fields8.getTree());
                    char_literal9=(Token)match(input,45,FOLLOW_45_in_dclass267);  
                    stream_45.add(char_literal9);



                    // AST REWRITE
                    // elements: fields, table
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 34:3: -> ^( CLASS table fields )
                    {
                        // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:34:6: ^( CLASS table fields )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASS, "CLASS"), root_1);

                        adaptor.addChild(root_1, stream_table.nextTree());
                        adaptor.addChild(root_1, stream_fields.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:35:5: ( 'abstract' | 'Abstract' ) table '(' fields ')'
                    {
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:35:5: ( 'abstract' | 'Abstract' )
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==46) ) {
                        alt4=1;
                    }
                    else if ( (LA4_0==47) ) {
                        alt4=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }
                    switch (alt4) {
                        case 1 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:35:6: 'abstract'
                            {
                            string_literal10=(Token)match(input,46,FOLLOW_46_in_dclass286);  
                            stream_46.add(string_literal10);


                            }
                            break;
                        case 2 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:35:19: 'Abstract'
                            {
                            string_literal11=(Token)match(input,47,FOLLOW_47_in_dclass290);  
                            stream_47.add(string_literal11);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_table_in_dclass293);
                    table12=table();

                    state._fsp--;

                    stream_table.add(table12.getTree());
                    char_literal13=(Token)match(input,44,FOLLOW_44_in_dclass295);  
                    stream_44.add(char_literal13);

                    pushFollow(FOLLOW_fields_in_dclass297);
                    fields14=fields();

                    state._fsp--;

                    stream_fields.add(fields14.getTree());
                    char_literal15=(Token)match(input,45,FOLLOW_45_in_dclass299);  
                    stream_45.add(char_literal15);



                    // AST REWRITE
                    // elements: fields, table
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 36:3: -> ^( ABSTRACT table fields )
                    {
                        // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:36:6: ^( ABSTRACT table fields )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ABSTRACT, "ABSTRACT"), root_1);

                        adaptor.addChild(root_1, stream_table.nextTree());
                        adaptor.addChild(root_1, stream_fields.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:5: ( 'class' | 'Class' ) table ( 'extends' | 'Extends' ) table '(' fields ')'
                    {
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:5: ( 'class' | 'Class' )
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==42) ) {
                        alt5=1;
                    }
                    else if ( (LA5_0==43) ) {
                        alt5=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);

                        throw nvae;
                    }
                    switch (alt5) {
                        case 1 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:6: 'class'
                            {
                            string_literal16=(Token)match(input,42,FOLLOW_42_in_dclass318);  
                            stream_42.add(string_literal16);


                            }
                            break;
                        case 2 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:16: 'Class'
                            {
                            string_literal17=(Token)match(input,43,FOLLOW_43_in_dclass322);  
                            stream_43.add(string_literal17);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_table_in_dclass325);
                    table18=table();

                    state._fsp--;

                    stream_table.add(table18.getTree());
                    // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:31: ( 'extends' | 'Extends' )
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==48) ) {
                        alt6=1;
                    }
                    else if ( (LA6_0==49) ) {
                        alt6=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 0, input);

                        throw nvae;
                    }
                    switch (alt6) {
                        case 1 :
                            // /Users/Hades/Personal/Universidade/EL/PI/Projecto/v2.2/dreql.g:37:32: 'extends'
                            {
                            string_literal19=(Token)match(input,48,FOLLOW_48_in_dclass328);  
                            stream_48.add(string_literal19);

